[metadata]
name = mobilitylabs-bsdprof
version = 0.1
author = The BSD Professor
author_email = me@bsdprof.com
description = A Python wrapper for the MobilityLabs Madrid REST API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raulmarinperez/mobilitylabs
project_urls =
    Bug Tracker = https://github.com/raulmarinperez/mobilitylabs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = mobilitylabs
packages = find:
python_requires = >=3.7

[options.packages.find]
where = mobilitylabs
