[metadata]
name = mobilitylabs-bsdprof
version = 0.1.3
author = The BSD Professor
author_email = me@bsdprof.com
description = A Python wrapper for the MobilityLabs Madrid REST API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raulmarinperez/mobilitylabs
project_urls =
    Bug Tracker = https://github.com/raulmarinperez/mobilitylabs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests
[options.packages.find]
where = src
